ref: upgrade get all product impl