@@ -2,13 +2,15 @@ package lk.spring_security.refresh_token.usecase.product;
 
 import lk.spring_security.refresh_token.domain.models.Product;
 import lk.spring_security.refresh_token.domain.repositories.ProductRepository;
+import lk.spring_security.refresh_token.usecase.product.records.ProductResult;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-public class ProductUseCaseImpl implements  ProductUseCase {
+public class ProductUseCaseImpl implements ProductUseCase {
 
     //inject required dependencies
-    private final  ProductRepository productRepository;
+    private final ProductRepository productRepository;
 
     public ProductUseCaseImpl(ProductRepository productRepository) {
         this.productRepository = productRepository;
@@ -16,23 +18,32 @@ public class ProductUseCaseImpl implements  ProductUseCase {
 
     //get all products
     @Override
-    public List<Product> getAllProducts(){
-        return productRepository.getAllProducts().stream().toList();
+    public List<ProductResult> getAllProducts() {
+        return productRepository.getAllProducts()
+                .stream().
+                map(product ->
+                        new ProductResult(
+                        product.getProductId(),
+                        product.getProductName(),
+                        product.getProductPrice()
+                )).collect(Collectors.toList());
+
+
     }
 
 
     //create product
     @Override
-    public Product createProduct(Product product){
+    public Product createProduct(Product product) {
         return productRepository.saveProducts(product);
     }
 
     //update products
     @Override
-    public Product updateProducts(Long productId, Product product){
-       if(!productRepository.productFindById(productId).isPresent()){
-           throw new IllegalArgumentException("Product doesn't exists");
-       }
+    public Product updateProducts(Long productId, Product product) {
+        if (!productRepository.productFindById(productId).isPresent()) {
+            throw new IllegalArgumentException("Product doesn't exists");
+        }
 
         return productRepository.updateProducts(productId, product);
     }
